classDiagram
    %% Enum 定義は docs/common/01_Enum.mmd を参照
    namespace TrainingDomain {
        %% トレーニングモード
        class TrainingEnemy {
            <<Entity>>
            +TrainingEnemyId Id
            +string Name
            +string ImagePath
            +int Level
            +Status Status
            -ValidateName(name: string) string
        }

        class TrainingEnemyId {
            <<Value Object>>
            +int Id
        }

        class ITrainingEnemyRepository {
            +Task~TrainingEnemy?~ GetTrainingEnemyAsync(id: TrainingEnemyId)
            +Task~IReadOnlyList~TrainingEnemy~~ GetTrainingEnemiesAsync()
        }

        class TrainingBattleFactory {
            <<Application Service>>
            +CreatePlayerActor(player: Player, effectiveStatus: Status, selectedPlayerMoves: IEnumerable~Move~) BattleActorInput
            +CreateEnemyActor(enemy: TrainingEnemy) BattleActorInput
            +CreateTurnActions(playerActor: BattleActorInput, enemyActorId: Guid, playerMove: Move) BattleActionInput[]
            +CreateTrainingMoves(enemy: TrainingEnemy, playerMoves: IEnumerable~Move~) Move[]
            +CreatePlayerTrainingNormalAttack(status: Status) Move
            +PlayerActorId Guid
            +EnemyActorId Guid
            -CreateTrainingNormalAttack(moveId: int, status: Status) Move
        }

        class TrainingOutcome {
            <<Enum>>
            Win
            Lose
            Draw
        }

        class TrainingOutcomeJudge {
            <<Domain Service>>
            +Judge(states: IEnumerable~BattleActorState~, playerActorId: BattleActorId, enemyActorId: BattleActorId) TrainingOutcome
        }

        class TrainingExpCalculator {
            <<Domain Service>>
            +Calculate(player: Player, enemy: TrainingEnemy, metrics: TrainingContributionMetrics, outcome: TrainingOutcome) int
        }

        class TrainingBattleSummary {
            <<Value Object>>
            +int Turn
            +int CurrentPlayerHp
            +int CurrentEnemyHp
            +TrainingOutcome Outcome
        }

        class TrainingContributionMetrics {
            <<Value Object>>
            +int PlayerDealtTotalDamage
            +int PlayerEffectiveHealTotal
            +int CurrentPlayerHp
        }

        class TrainingWeaponMasteryPolicy {
            <<Domain Service>>
            +ShouldIncrease(playerLevel: int, enemyLevel: int) bool
            +ResolveAllowedLevelGap(playerLevel: int) int
        }

        class TrainingWeaponMasteryResult {
            <<Value Object>>
            +PlayerEquipmentId? WeaponEquipmentId
            +int MasteryDelta
            +bool Increased
        }

        class TrainingService {
            <<Application Service>>
            +GetTrainingEnemies(playerId: PlayerId) TrainingEnemyView[]
            +ExecuteTraining(playerId : PlayerId, enemyId : TrainingEnemyId) TrainingResultView
            -ApplyWeaponMastery(player: Player, enemy: TrainingEnemy, playerEquipments: IReadOnlyList~PlayerEquipment~, now: DateTimeOffset) TrainingWeaponMasteryResult
            -ResolveBattleUntilFinished(actors: IReadOnlyList~BattleActorInput~, playerMoves: IReadOnlyList~Move~, moves: IReadOnlyList~Move~) (TrainingBattleSummary, TrainingContributionMetrics)
            -BuildNextTurnActors(actors: IReadOnlyList~BattleActorInput~, states: IReadOnlyList~BattleActorState~) BattleActorInput[]
            -BuildSummary(actors: IReadOnlyList~BattleActorInput~, turn: int) TrainingBattleSummary
            -BuildContributionMetrics(summary: TrainingBattleSummary, playerDealtTotalDamage: int, playerEffectiveHealTotal: int) TrainingContributionMetrics
            -ResolveVisibleEnemyLevelCap(playerLevel: int, enemyLevels: IReadOnlyList~int~) int
            -ApplyExp(player: Player, exp: int) bool
        }

        class TrainingEnemyView {
            <<Read Model>>
            +string Name
            +string ImagePath
            +int Level
        }

        class TrainingResultView {
            <<Read Model>>
            +string TrainingResult
            +int Turn
            +int CurrentPlayerHp
            +int MaxPlayerHp
            +int CurrentEnemyHp
            +int MaxEnemyHp
            +int Exp
            +bool IsPlayerLevelUp
            +bool IsJobLevelUp
            +int WeaponMasteryDelta
            +IReadOnlyList~LearnedMoveView~ NewlyLearnedMoves
        }
    }

    TrainingEnemy *-- TrainingEnemyId : has
    ITrainingEnemyRepository --> TrainingEnemy : loads
    TrainingBattleFactory ..> TrainingEnemy : uses
    TrainingBattleSummary ..> TrainingOutcome : has
    TrainingService ..> ITrainingEnemyRepository : use
    TrainingService ..> TrainingBattleFactory : use
    TrainingService ..> TrainingOutcomeJudge : use
    TrainingService ..> TrainingExpCalculator : use
    TrainingService ..> TrainingWeaponMasteryPolicy : use
    TrainingService ..> TrainingWeaponMasteryResult : builds
    TrainingService ..> EquipmentStatusResolver : use
    TrainingService ..> IEquipmentRepository : use
    TrainingService ..> IPlayerEquipmentRepository : use
    TrainingService ..> TrainingBattleSummary : builds
    TrainingService ..> TrainingContributionMetrics : builds
    TrainingService ..> TrainingResultView : has
    TrainingService ..> TrainingEnemyView : has
